drk02/k8s/drk02_banana.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drk02-banana-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: drk02-banana
  template:
    metadata:
      labels:
        app: drk02-banana
    spec:
      containers:
        - name: drk02-banana-container
          image: localhost:5000/drk/drk02-banana:latest
          imagePullPolicy: 'Always'
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: drk02-banana-service
  labels:
    app: drk02-banana
spec:
  selector:
    app: drk02-banana
  ports:
    - port: 3001
---
