drk02/k8s/drk02_coconut.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drk02-coconut-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: drk02-coconut
  template:
    metadata:
      labels:
        app: drk02-coconut
    spec:
      containers:
        - name: drk02-coconut-container
          image: localhost:5000/drk/drk02-coconut:latest
          imagePullPolicy: 'Always'
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: drk02-coconut-service
  labels:
    app: drk02-coconut
spec:
  selector:
    app: drk02-coconut
  ports:
    - port: 3002
---
